[gd_scene load_steps=28 format=3 uid="uid://b6ockeiii8ikw"]

[ext_resource type="Script" path="res://main/overworld/player/player.gd" id="1_vhdda"]
[ext_resource type="Texture2D" uid="uid://cqt1xfcj7a12u" path="res://main/overworld/player/player_sprite.png" id="2_b2tur"]
[ext_resource type="Texture2D" uid="uid://blv3rgbqcki6r" path="res://main/overworld/player/shadow.png" id="2_we5eh"]
[ext_resource type="AudioStream" uid="uid://x1cwxnb2kkpi" path="res://main/overworld/player/step_1.wav" id="3_42mdw"]
[ext_resource type="AudioStream" uid="uid://df22t1ioesi3n" path="res://main/overworld/player/step_2.wav" id="4_an4mf"]
[ext_resource type="AudioStream" uid="uid://bkjptg5yuukop" path="res://main/overworld/player/step_3.wav" id="5_823hn"]
[ext_resource type="AudioStream" uid="uid://d74c61nar6me" path="res://main/overworld/player/thud.wav" id="6_b3i40"]
[ext_resource type="AudioStream" uid="uid://cwrp8ihbdqw3e" path="res://main/overworld/player/jump.wav" id="7_3iowc"]
[ext_resource type="AudioStream" uid="uid://b50sr6xxr7s6f" path="res://main/overworld/player/getup.wav" id="7_6jyej"]
[ext_resource type="AudioStream" uid="uid://yygi1ri5mng8" path="res://main/combat/fighter/dizzy.wav" id="8_1tqo0"]
[ext_resource type="Texture2D" uid="uid://c51qqw2jrhduk" path="res://main/combat/fighter/dizzy.png" id="10_ickir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0ovs"]
size = Vector2(4, 4)

[sub_resource type="Animation" id="Animation_owfbi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StepPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("JumpPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GetUpPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ConfusePlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Dizzy:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Dizzy:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3rw8r"]
resource_name = "collapsed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_rmxfo"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jjnp5"]
resource_name = "get_up"
length = 55.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GetUpPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(19, 28),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(20, 29, 32, 34),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 3, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConfusePlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 40),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dizzy:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(40, 43, 46),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Dizzy:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(40, 49),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_gb2ab"]
resource_name = "jump_down"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -4, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.45, 1.25)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("JumpPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_rvjno"]
resource_name = "jump_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -12, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("JumpPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_iis8s"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_6rqdc"]
resource_name = "right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_yuge2"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_xw87c"]
resource_name = "walk_left"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StepPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e1q21"]
resource_name = "walk_right"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StepPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6we28"]
_data = {
"RESET": SubResource("Animation_owfbi"),
"collapsed": SubResource("Animation_3rw8r"),
"down": SubResource("Animation_rmxfo"),
"get_up": SubResource("Animation_jjnp5"),
"jump_down": SubResource("Animation_gb2ab"),
"jump_up": SubResource("Animation_rvjno"),
"left": SubResource("Animation_iis8s"),
"right": SubResource("Animation_6rqdc"),
"up": SubResource("Animation_yuge2"),
"walk_left": SubResource("Animation_xw87c"),
"walk_right": SubResource("Animation_e1q21")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_748uh"]
streams_count = 3
random_pitch = 1.2
random_volume_offset_db = 2.0
stream_0/stream = ExtResource("3_42mdw")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_an4mf")
stream_1/weight = 1.0
stream_2/stream = ExtResource("5_823hn")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jug8r"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 2.0
stream_0/stream = ExtResource("6_b3i40")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uixlx"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 2.0
stream_0/stream = ExtResource("7_3iowc")
stream_0/weight = 1.0

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_vhdda")
speed = 60.0
fall_speed = 99.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -6)
limit_bottom = 64

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.5, 4)
texture = ExtResource("2_we5eh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b2tur")
hframes = 9
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_o0ovs")

[node name="FloorLeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2(-3, 2)
target_position = Vector2(0, 2.1)

[node name="FloorRightRayCast2D" type="RayCast2D" parent="."]
position = Vector2(2, 2)
target_position = Vector2(0, 2.1)

[node name="WallRayCast2D" type="RayCast2D" parent="."]
position = Vector2(1, 2)
target_position = Vector2(1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 8.0
libraries = {
"": SubResource("AnimationLibrary_6we28")
}

[node name="StepPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_748uh")
volume_db = -9.0

[node name="ThudPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_jug8r")
volume_db = 2.0

[node name="GetUpPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6jyej")
volume_db = 20.0
pitch_scale = 1.3

[node name="ConfusePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_1tqo0")
volume_db = -80.0
pitch_scale = 0.91

[node name="JumpPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_uixlx")
volume_db = -9.0

[node name="Dizzy" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -4)
texture = ExtResource("10_ickir")
hframes = 3
